# toolkit-manager

./: .cnb.yml  .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: crlf-device-field-bug.md
plan/ch01/: checklist.md  plan.md  spec.md  task.md  user.md
plan/ch02/: checklist.md  plan.md  spec.md  task.md
plan/ch03/: checklist.md  plan.md  spec.md  task.md
plan/ch04/: checklist.md  plan.md  spec.md  task.md  user.md
plan/ch05/: checklist.md  plan.md  spec.md  task.md  user.md
plan/ch06/: checklist.md  plan.md  spec.md  task.md  user.md
plan/ch07/: checklist.md  plan.md  spec.md  task.md  user.md
plan/ch08/: checklist.md  plan.md  spec.md  task.md
plan/ch09/: checklist.md  plan.md  spec.md  task.md
scripts/: kill-dev.mjs  sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ContentArea.tsx  DeviceCard.tsx  DeviceCreateDialog.tsx  DeviceDeleteDialog.tsx  DeviceDetailDialog.tsx  DeviceEditDialog.tsx  DeviceStatusBadge.tsx  DirectoryItemRow.tsx  GlobalMcpConfirmDialog.tsx  GlobalMcpSwitch.tsx  Header.tsx  PlaceholderPage.tsx  ProjectCard.tsx  SideNav.tsx
src/config/: constants.ts  devices.ts  nav.ts  projects.ts  settings.ts
src/context/: DirectoryConfigContext.tsx
src/hooks/: useActiveTab.ts  useDebouncedCheck.ts  useDevices.ts  useDirectoryConfig.ts  useProjects.ts  useToast.ts
src/lib/: clipboard.ts  path.ts  (+5 more)
(+15 files in other folders)
